Fixed navbar element hover issue
on hovering on a navbar element, the 2px border that would appear below would make the elements move up by 2px. I solved this problem by adding a 2px transparent border during no hover, so the elements would be shifted up by 2px at all times and therefore no movement while hovering

--- a/Public_static/css/main1.css
+++ b/Public_static/css/main1.css
@@ -117,6 +117,7 @@ nav
 {
     .he
     {
+        border-bottom: 2px solid rgba(0,0,0,0);
         text-align: center;
         color: #0F0E0E;
         font-size: 18px;
